hm - Scrollbar fix, resizing POC

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body, html {
+  width: 100%;
+  height: 100%;
+}
 body, p, ul, li {
   padding: 0;
   margin: 0;
@@ -17,13 +21,13 @@ html, body {
 }
 #editor-container, #preview-container {
   display: flex;
-  flex: 1;
   height: 100%;
-  width: 50%;
+  width: 100%;
+  flex: 1;
 }
 .app-main {
   display: flex;
-  height: 100%;
+  height: calc(100% - 48px);
   flex: 1;
 }
 .app-toolbar {
